# AutoCerfa14732

./: Exemple de modèle de reçu fiscal.odt  README.md  pyproject.toml  requirements.txt
src/: recu_fiscal_auto.py
